--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,7 +7,7 @@ body {
 .board {
   width: 40vw;
   height: 40vw;
-  margin: 0 auto;
+  // margin: 0 auto;
   background-color: #34495e;
   color: #fff;
   border: 6px solid #2c3e50;
